# GLSbot

./: CMakeLists.txt  LICENSE  README.md
.cmake/: fetch_libraries.cmake
source/: main.c
source/websocket/: socket.c  socket.h  websocket.c  websocket.h
